--- a/css/main.css
+++ b/css/main.css
@@ -1,282 +1,501 @@
-/*! HTML5 Boilerplate v5.3.0 | MIT License | https://html5boilerplate.com/ */
-
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
-html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
-}
-
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * These selection rule sets have to be separate.
- * Customize the background color to match your design.
- */
-
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
-
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
-audio,
-canvas,
+html,
+body,
+div,
+span,
+applet,
+object,
 iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
 img,
-svg,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
 video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol,
+ul {
+    list-style: none;
+}
+blockquote,
+q {
+    quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+body {
+    -webkit-text-size-adjust: none
+}
+mark {
+    background-color: transparent;
+    color: inherit
+}
+input::-moz-focus-inner {
+    border: 0;
+    padding: 0
+}
+input,
+select,
+textarea {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    -ms-appearance: none;
+    appearance: none
+}
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
+}
+html {
+    height: 100%;
+    overflow: hidden;
+    font-size: 18pt;
+}
+body {
+    min-width: 320px;
+    line-height: 1.0;
+    height: 100%;
+    word-wrap: break-word;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
+    background-image: linear-gradient(to top, rgba(64, 58, 89, 0.478), rgba(64, 58, 89, 0.478)), url('../img/background.jpeg');
+    background-position: 0% 0%, center;
+    background-repeat: repeat, no-repeat;
+    background-size: auto, cover;
+    background-attachment: fixed;
+    background-color: #FFFFFF;
+}
+strong {
+    color: inherit;
+    font-weight: bolder;
+}
+em {
+    font-style: italic;
+}
+code {
+    font-family: "Lucida Console", "Courier New", monospace;
+    font-weight: normal;
+    text-indent: 0;
+    letter-spacing: 0;
+    font-size: 0.9em;
+    margin: 0 0.25em;
+    padding: 0.25em 0.5em;
+    background-color: rgba(144, 144, 144, 0.25);
+    border-radius: 0.25em;
+}
+mark {
+    background-color: rgba(144, 144, 144, 0.25);
+}
+a {
+    -moz-transition: color 0.25s ease, background-color 0.25s ease, border-color 0.25s ease;
+    -webkit-transition: color 0.25s ease, background-color 0.25s ease, border-color 0.25s ease;
+    -ms-transition: color 0.25s ease, background-color 0.25s ease, border-color 0.25s ease;
+    transition: color 0.25s ease, background-color 0.25s ease, border-color 0.25s ease;
+    color: inherit;
+    text-decoration: underline;
+}
+s {
+    text-decoration: line-through;
+}
+body:before {
+    display: block;
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #010204;
+    z-index: 1;
+    opacity: 0;
+    visibility: hidden;
+    -moz-transition: opacity 1s ease-in-out 0s, visibility 1s 0s;
+    -webkit-transition: opacity 1s ease-in-out 0s, visibility 1s 0s;
+    -ms-transition: opacity 1s ease-in-out 0s, visibility 1s 0s;
+    transition: opacity 1s ease-in-out 0s, visibility 1s 0s;
+}
+body.is-loading:before {
+    opacity: 1;
+    visibility: visible;
+}
+#wrapper {
+    -webkit-overflow-scrolling: touch;
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    -moz-flex-direction: column;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -moz-align-items: center;
+    -webkit-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+    min-height: 100%;
+    position: relative;
+    z-index: 1;
+}
+#main {
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    position: relative;
+    max-width: 100%;
+    z-index: 1;
+    -moz-align-items: center;
+    -webkit-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+    text-align: center;
+    -moz-transition: all 3s ease 0s;
+    -webkit-transition: all 3s ease 0s;
+    -ms-transition: all 3s ease 0s;
+    transition: all 3s ease 0s;
+    -moz-transform: perspective(1000px) rotateY(0deg);
+    -webkit-transform: perspective(1000px) rotateY(0deg);
+    -ms-transform: perspective(1000px) rotateY(0deg);
+    transform: perspective(1000px) rotateY(0deg);
+    -moz-transform-origin: 50% 50%;
+    -webkit-transform-origin: 50% 50%;
+    -ms-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+}
+#main > .inner {
+    overflow-x: hidden;
+    width: 44rem;
+    max-width: 100%;
+    padding: 3.90625rem 3.125rem;
+}
+#main > .inner > * {
+    margin: 1.25rem 0;
+    -moz-transition: opacity 1s ease-in-out 0s;
+    -webkit-transition: opacity 1s ease-in-out 0s;
+    -ms-transition: opacity 1s ease-in-out 0s;
+    transition: opacity 1s ease-in-out 0s;
+}
+#main > .inner >:first-child {
+    margin-top: 0 !important;
+}
+#main > .inner >:last-child {
+    margin-bottom: 0 !important;
+}
+#main > .inner > .image {
+    margin: 1.5625rem 0;
+}
+#main > .inner > .video {
+    margin: 1.5625rem 0;
+}
+body.is-loading #main {
+    opacity: 0;
+    -moz-transform: perspective(1000px) rotateY(-15deg);
+    -webkit-transform: perspective(1000px) rotateY(-15deg);
+    -ms-transform: perspective(1000px) rotateY(-15deg);
+    transform: perspective(1000px) rotateY(-15deg);
+}
+body.is-loading #main > .inner > * {
+    opacity: 0;
+}
+#main > .inner >:nth-child(2) {
+    -moz-transition-delay: 0.25s;
+    -webkit-transition-delay: 0.25s;
+    -ms-transition-delay: 0.25s;
+    transition-delay: 0.25s;
+}
+#main > .inner >:nth-child(3) {
+    -moz-transition-delay: 0.5s;
+    -webkit-transition-delay: 0.5s;
+    -ms-transition-delay: 0.5s;
+    transition-delay: 0.5s;
+}
+#main > .inner >:nth-child(4) {
+    -moz-transition-delay: 0.75s;
+    -webkit-transition-delay: 0.75s;
+    -ms-transition-delay: 0.75s;
+    transition-delay: 0.75s;
+}
+#main > .inner >:nth-child(5) {
+    -moz-transition-delay: 1s;
+    -webkit-transition-delay: 1s;
+    -ms-transition-delay: 1s;
+    transition-delay: 1s;
+}
+#credits {
+    cursor: default;
+    margin-top: 1rem !important;
+    width: -moz-max-content;
+    width: -webkit-max-content;
+    width: -ms-max-content;
+    width: max-content;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    color: #FFFFFF;
+    font-family: 'Exo';
+    position: relative;
+    letter-spacing: 0.05rem;
+    left: 0.025rem;
+    font-size: 0.8em;
+    line-height: 1.675;
+    font-weight: 100;
+}
+#credits a {
+    -moz-transition: opacity 0.25s ease;
+    -webkit-transition: opacity 0.25s ease;
+    -ms-transition: opacity 0.25s ease;
+    transition: opacity 0.25s ease;
+    opacity: 0.5;
+    text-decoration: none !important;
+    text-decoration: underline;
+}
+#credits a:hover {
+    opacity: 1;
+    text-decoration: none !important;
+    text-decoration: none;
+}
+h1 br + br,
+p br + br {
+    display: block;
+    content: ' ';
+}
+#text01 br + br {
+    margin-top: 0.705rem;
+}
+#text01 {
+    color: #FFFFFF;
+    font-family: 'Exo';
+    position: relative;
+    letter-spacing: 0.35rem;
+    left: 0.175rem;
+    font-size: 2.625em;
+    line-height: 1.175;
+    font-weight: 900;
+}
+#text02 br + br {
+    margin-top: 1.005rem;
+}
+#text02 {
+    color: #FFFFFF;
+    font-family: 'Exo';
+    position: relative;
+    letter-spacing: 0.05rem;
+    left: 0.025rem;
+    font-size: 1em;
+    line-height: 1.675;
+    font-weight: 100;
+}
+#credits br + br {
+    margin-top: 1.005rem;
+}
+hr {
+    width: 100%;
+    position: relative;
+    padding: 0;
+    border: 0;
+}
+hr:before {
+    content: '';
+    display: inline-block;
     vertical-align: middle;
 }
-
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
+#divider01 {
+    height: 1rem;
+    line-height: 1rem;
 }
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-    resize: vertical;
-}
-
-/* ==========================================================================
-   Browser Upgrade Prompt
-   ========================================================================== */
-
-.browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Hide visually and from screen readers
- */
-
-.hidden {
-    display: none !important;
-}
-
-/*
- * Hide only visually, but have it available for screen readers:
- * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
- */
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
+#divider01:before {
+    width: 23%;
+    background-color: rgba(255, 255, 255, 0.231);
     height: 1px;
-    margin: -1px;
-    overflow: hidden;
+}
+.icons {
+    cursor: default;
     padding: 0;
-    position: absolute;
-    width: 1px;
+    letter-spacing: 0;
 }
-
-/*
- * Extends the .visuallyhidden class to allow the element
- * to be focusable when navigated to via the keyboard:
- * https://www.drupal.org/node/897638
- */
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
+.icons li {
+    display: inline-block;
+    vertical-align: middle;
 }
-
-/*
- * Hide visually and from screen readers, but maintain layout
- */
-
-.invisible {
-    visibility: hidden;
+.icons li a {
+    display: block;
+    color: inherit;
+    text-decoration: none;
+    text-align: center;
+    letter-spacing: 0;
 }
-
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
-.clearfix:before,
-.clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
+.icons li a .label {
+    display: none;
 }
-
-.clearfix:after {
-    clear: both;
+#icons01 {
+    font-size: 1.25em;
 }
-
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
+#icons01 li {
+    margin: 0.625rem;
 }
-
-@media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
+#icons01 li a {
+    border-radius: 100%;
+    width: 2em;
+    height: 2em;
+    line-height: 2em;
 }
-
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid the additional HTTP request:
-   http://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
-
-@media print {
-    *,
-    *:before,
-    *:after,
-    *:first-letter,
-    *:first-line {
-        background: transparent !important;
-        color: #000 !important; /* Black prints faster:
-                                   http://www.sanbeiji.com/archives/953 */
-        box-shadow: none !important;
-        text-shadow: none !important;
+#icons01 .n01 {
+    color: #FFFFFF;
+    border: solid 1px #48A3B0;
+}
+#icons01 .n02 {
+    color: #FFFFFF;
+    border: solid 1px #93B4C7;
+}
+#icons01 .n03 {
+    color: #FFFFFF;
+    border: solid 1px #93B4C7;
+}
+#icons01 .n04 {
+    color: #FFFFFF;
+    border: solid 1px #93B4C7;
+}
+#icons01 .n05 {
+    color: #FFFFFF;
+    border: solid 1px #93B4C7;
+}
+@media (max-width: 1680px) {
+    html {
+        font-size: 13pt;
     }
-
-    a,
-    a:visited {
-        text-decoration: underline;
+}
+@media (max-width: 1280px) {
+    html {
+        font-size: 13pt;
     }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
+}
+@media (max-width: 980px) {
+    html {
+        font-size: 11pt;
     }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
+}
+@media (max-width: 736px) {
+    html {
+        font-size: 11pt;
     }
-
-    /*
-     * Don't show links that are fragment identifiers,
-     * or use the `javascript:` pseudo protocol
-     */
-
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
+    #main > .inner {
+        padding: 3rem 2rem;
     }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
+}
+@media (max-width: 360px) {
+    #main > .inner {
+        padding: 2.5rem 1.25rem;
     }
-
-    /*
-     * Printing Tables:
-     * http://css-discuss.incutio.com/wiki/Printing_Tables
-     */
-
-    thead {
-        display: table-header-group;
+    #text01 {
+        font-size: 2em;
     }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
+    #icons01 li {
+        margin: 0.46875rem;
     }
 }
